fix jumping edit button issue

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,3 @@
-.hide-buttons .btn {
+.hide-buttons .button {
   display: none;
 }
